Remoção de code smells do SonaLint